integrate React into angular app via web component

--- a/angular-project/src/app/app.component.html
+++ b/angular-project/src/app/app.component.html
@@ -1,3 +1,2 @@
-
-
-<router-outlet></router-outlet>
+<aw-settlement [attr.formTitle]="formTitle"></aw-settlement>// atte. this is used to pass the form title to the component
+<aw-rich-text-editor></aw-rich-text-editor>
