created my own floatLabel instead of using Primereact floadLabel

--- a/angular-project/src/app/app.component.html
+++ b/angular-project/src/app/app.component.html
@@ -1,2 +1,2 @@
-<aw-settlement [attr.formTitle]="formTitle"></aw-settlement>// atte. this is used to pass the form title to the component
+<aw-settlement [attr.formTitle]="formTitle"></aw-settlement>
 <aw-rich-text-editor></aw-rich-text-editor>
