added custom flost label, Search components in react component and update angular template event

--- a/angular-project/src/app/app.component.css
+++ b/angular-project/src/app/app.component.css
@@ -1,4 +1,8 @@
-aw-settlement{
+aw-settlement, aw-search-box {
     font-size: 25px;
-    color: #f5f7f5;
+    color: #3f0101;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 auto;
 }
