--- a/angular-project/src/app/app.component.html
+++ b/angular-project/src/app/app.component.html
@@ -1,2 +1,3 @@
+<aw-search-box [attr.searchTitle]="searchTitle" (submit)="onSubmit($event)"></aw-search-box>
 <aw-settlement [attr.formTitle]="formTitle"></aw-settlement>
 <aw-rich-text-editor></aw-rich-text-editor>
