Added  TextField and Tab components

--- a/angular-project/src/app/app.component.html
+++ b/angular-project/src/app/app.component.html
@@ -1,3 +1,8 @@
-<aw-search-box [attr.searchTitle]="searchTitle" (submit)="onSubmit($event)"></aw-search-box>
+<aw-search-box
+  [attr.searchTitle]="searchTitle"
+  (submit)="onSubmit($event)"
+></aw-search-box>
+
+<aw-text-field [attr.label]="label"></aw-text-field>
 <aw-settlement [attr.formTitle]="formTitle"></aw-settlement>
 <aw-rich-text-editor></aw-rich-text-editor>
