used link to open in new tab

--- a/angular-project/src/app/app.component.html
+++ b/angular-project/src/app/app.component.html
@@ -2,7 +2,7 @@
   [attr.searchTitle]="searchTitle"
   (submit)="onSubmit($event)"
 ></aw-search-box>
-
-<aw-text-field [attr.label]="label"></aw-text-field>
+<aw-tab-page img [src]="imageUrl" alt="React Image"></aw-tab-page>
 <aw-settlement [attr.formTitle]="formTitle"></aw-settlement>
+<aw-text-field [attr.label]="label"></aw-text-field>
 <aw-rich-text-editor></aw-rich-text-editor>
