--- a/react-project/src/App.css
+++ b/react-project/src/App.css
@@ -1,3 +1,43 @@
 .App {
   text-align: center;
 }
+.nav-bar {
+  background-color: #4a5469;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 4px solid #61dafb;
+  margin: 0 10px;
+  padding: 1rem ;
+}
+
+.nav-list {
+  list-style-type: none;
+  color: white;
+  display: flex;
+  gap: 2.5rem;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-list li a {
+  background-color: #434c5e;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.nav-list li a:hover {
+  color: #61dafb;
+}
+
+.main-content {
+  padding: 2rem;
+}
+@media (max-width: 768px) {
+  .nav-list {
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
