--- a/angular-project/src/app/app.component.html
+++ b/angular-project/src/app/app.component.html
@@ -5,4 +5,5 @@
 <aw-tab-page img [src]="imageUrl" alt="React Image"></aw-tab-page>
 <aw-settlement [attr.formTitle]="formTitle"></aw-settlement>
 <aw-text-field [attr.label]="label"></aw-text-field>
+<aw-parent-page></aw-parent-page>
 <aw-rich-text-editor></aw-rich-text-editor>
