--- a/react-project/src/App.css
+++ b/react-project/src/App.css
@@ -1,43 +1,64 @@
-.App {
-  text-align: center;
+App{
+  font-family: 'Courier New', Courier, monospace;
 }
 .nav-bar {
-  background-color: #4a5469;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: #333;
   border-bottom: 4px solid #61dafb;
   margin: 0 10px;
   padding: 1rem ;
+  position: relative;
 }
 
 .nav-list {
-  list-style-type: none;
-  color: white;
   display: flex;
-  gap: 2.5rem;
-  margin: 0;
+  list-style: none;
   padding: 0;
+  margin: 0;
 }
 
-.nav-list li a {
-  background-color: #434c5e;
+.nav-list li {
+  margin-right: 1rem;
+}
+
+.nav-list a {
   color: white;
   text-decoration: none;
-  font-weight: bold;
   transition: color 0.3s ease;
 }
-
 .nav-list li a:hover {
   color: #61dafb;
 }
 
-.main-content {
-  padding: 2rem;
+/* Hamburger responsive styles */
+.hamburger {
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  color: white;
+  display: none;
+  cursor: pointer;
 }
-@media (max-width: 768px) {
+
+@media (max-width: 800px) {
+  .hamburger {
+    display: block;
+  }
+
   .nav-list {
     flex-direction: column;
-    gap: 1rem;
+    display: none;
+    background-color: #444;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+  }
+
+  .nav-list.open {
+    display: flex;
+  }
+
+  .nav-list li {
+    margin: 1rem;
   }
 }
